--- a/Advanced Java 20554 /Maman 11/Question 2/RandomShape.fxml
+++ b/Advanced Java 20554 /Maman 11/Question 2/RandomShape.fxml
@@ -1,1 +1,14 @@
 
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.VBox?>
+
+
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RandomShapesController">
+   <children>
+      <Canvas fx:id="canv" height="373.0" width="601.0" />
+      <Button fx:id="btn" mnemonicParsing="false" onAction="#BtnPressed" text="Button" />
+   </children>
+</VBox>
